# pixie-evals

./: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  TEST_RESULTS.md
.github/: copilot-instructions.md
changelogs/: dataset-generation-e2e.md  dataset-generation-schema-validation.md  evaluation-creation-without-dataset.md  evaluator-optimization.md  fix-inline-imports.md  fix-mutation-cache-updates.md  labeling-graphql-migration.md  labeling-uuid-resolution.md  manual-labeling-improvements.md  optimization-stats-refresh.md  sdk-remote-client-codegen.md  signup-and-oauth.md
frontend/: codegen.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  (+2 more)
sdk/: README.md  ariadne_codegen.toml  pyproject.toml
sdk/labeling/: adf79684-0327-4261-9f6f-70719c0c947b.tsx  demo_eval.d.ts  demo_eval.html
sdk/pixie_sdk/: __init__.py  db.py  embed.py  graphql.py  ingest.py  server.py
sdk/pixie_sdk/_components/: __init__.py  _bundler.py  _esbuild.py  _registry.py  _scaffold.py  _scanner.py  _server.py  _shell.py
sdk/pixie_sdk/components/: __init__.py  registry.py  scaffold.py  scanner.py  server.py
sdk/pixie_sdk/remote_client/: __init__.py
sdk/pixie_sdk/templates/: default.html  default.html.j2
sdk/remote_client/: queries.graphql  schema.graphql
sdk/tests/: conftest.py  test_bundler.py  test_components_init.py  test_db.py  test_e2e_labeling.py  test_embed.py  test_esbuild.py  test_evaluate_dataset.py  test_graphql.py  test_ingest.py  test_optimize_evaluator.py  test_registry.py  test_scaffold.py  test_scanner.py  test_server.py  test_shell.py
(+106 files in other folders)
